change layout to fix gap and alerts

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,11 @@
   padding: 0;
 }
 
+html {
+  min-height: 100vh;
+  overflow-y: scroll;
+}
+
 body {
   font-family: "Raleway", sans-serif;
   font-size: 1rem;
@@ -155,6 +160,14 @@ img {
   opacity: 0.9;
   background: var(--light-color);
   color: #333;
+}
+
+.alert-wrapper {
+  position: fixed;
+  top: 4rem;
+  right: 2rem;
+  display: inline-block;
+  min-width: 300px;
 }
 
 .alert i:hover {
